--- a/grid_view.html
+++ b/grid_view.html
@@ -68,18 +68,22 @@
         .grid-item-body {
             position: relative;
             flex-grow: 1;
-            background-color: #000; /* Fundo preto para letterboxing */
-            /* Força o contêiner a manter uma proporção de 16:9. */
-            /* O navegador irá ajustar a altura com base na largura da célula da grade. */
-            aspect-ratio: 16 / 9;
+            background-color: #000; /* Fundo preto para o efeito de letterboxing */
+            /* Adicionado para garantir que o conteúdo interno (iframe) não ultrapasse os limites */
+            overflow: hidden;
+            /* Garante que o corpo ocupe o espaço da célula da grade, mas permita que o aspect-ratio funcione */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         /* O iframe é posicionado absolutamente para preencher o contêiner que já tem a proporção correta. */
         .grid-item-body iframe {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%; border: none;
+            /* O iframe agora terá sua largura e altura máximas definidas para caber no contêiner pai. */
+            max-width: 100%; max-height: 100%; border: none;
+            scrolling: "no"; /* Evita barras de rolagem dentro do iframe */
         }
         .loading::after { content: '🔄'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; animation: spin 1.5s linear infinite; }
-        .error::after { content: '❌'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; }
+        .error::after { content: '✖️'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; }
         @keyframes spin { from { transform: translate(-50%, -50%) rotate(0deg); } to { transform: translate(-50%, -50%) rotate(360deg); } }
     </style>
     <style>
