--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                         <div class="log-section-header">
                             <h3 id="system-log-title">Log do Sistema</h3>
                             <div class="log-filters">
-                                <button type="button" class="small-btn log-filter-btn" data-filter="error" title="Mostrar/Ocultar Erros">❌ Erros</button>
-                                <button type="button" class="small-btn log-filter-btn" data-filter="success" title="Mostrar/Ocultar Sucessos">✅ Sucessos</button>
-                                <button type="button" class="small-btn log-filter-btn" data-filter="details" title="Mostrar/Ocultar Detalhes">ℹ️ Detalhes</button>
+                                <button type="button" class="small-btn log-filter-btn" data-filter="error" title="Mostrar/Ocultar Erros" aria-pressed="false">❌ Erros</button>
+                                <button type="button" class="small-btn log-filter-btn" data-filter="success" title="Mostrar/Ocultar Sucessos" aria-pressed="false">✅ Sucessos</button>
+                                <button type="button" class="small-btn log-filter-btn" data-filter="details" title="Mostrar/Ocultar Detalhes" aria-pressed="false">ℹ️ Detalhes</button>
                             </div>
                             <button type="button" id="clear-log-btn" class="small-btn" title="Limpar o log">Limpar</button>
                         </div>
