--- a/index.html
+++ b/index.html
@@ -51,43 +51,43 @@
                         </div>
                         <!-- O select original, agora escondido. Ele serve como fonte de dados para o menu customizado. -->
                         <select id="action-select" multiple>
-                            <optgroup label="Gerenciamento de Atalhos">
+                            <optgroup label="Gerenciamento de Atalhos" class="group-shortcuts">
                                 <option value="desativar">Desativar Todos os Atalhos</option>
                                 <option value="ativar">Restaurar Atalhos</option>
                             </optgroup>
-                            <optgroup label="Gerenciamento do Sistema">
+                            <optgroup label="Gerenciamento do Sistema" class="group-system">
                                 <option value="mostrar_sistema">Mostrar Ícones do Sistema</option>
                                 <option value="ocultar_sistema">Ocultar Ícones do Sistema</option>
                                 <option value="limpar_imagens">Limpar Pasta de Imagens</option>
                                 <option value="atualizar_sistema">Atualizar Sistema</option>
                                 <option value="backup_aplicacao">Backup da Aplicação</option>
                                 <option value="restaurar_backup_aplicacao">Restaurar Backup da Aplicação</option>
-                                <option value="ativar_deep_lock">Ativar Deep Lock (Freeze)</option>
-                                <option value="desativar_deep_lock">Desativar Deep Lock</option>
                                 <option value="remover_nemo">Remover Nemo (Gerenciador de Arquivos)</option>
                                 <option value="instalar_nemo">Instalar Nemo e Cinnamon</option>
                                 <option value="desinstalar_scratchjr">Desinstalar ScratchJR</option>
                                 <option value="instalar_scratchjr">Instalar ScratchJR</option>
                             </optgroup>
-                            <optgroup label="Controle da Interface">
+                            <optgroup label="Controle da Interface" class="group-interface">
                                 <option value="desativar_barra_tarefas">Ocultar Barra de Tarefas</option>
                                 <option value="ativar_barra_tarefas">Restaurar Barra de Tarefas</option>
                                 <option value="bloquear_barra_tarefas">Bloquear Barra de Tarefas</option>
                                 <option value="desbloquear_barra_tarefas">Desbloquear Barra de Tarefas</option>
                                 <option value="disable_sleep_button">Desativar Suspensão (Sleep)</option>
                                 <option value="enable_sleep_button">Ativar Suspensão (Sleep)</option>
+                                <option value="ativar_deep_lock">Ativar Deep Lock (Freeze)</option>
+                                <option value="desativar_deep_lock">Desativar Deep Lock</option>
                             </optgroup>
-                            <optgroup label="Configurações do Navegador">
+                            <optgroup label="Configurações do Navegador" class="group-browser">
                                 <option value="definir_firefox_padrao">Definir Firefox como Padrão</option>
                                 <option value="definir_chrome_padrao">Definir Chrome como Padrão</option>
                             </optgroup>
-                            <optgroup label="Controle de Periféricos">
+                            <optgroup label="Controle de Periféricos" class="group-peripherals">
                                 <option value="desativar_perifericos">Desativar Mouse e Teclado</option>
                                 <option value="ativar_perifericos">Ativar Mouse e Teclado</option>
                                 <option value="desativar_botao_direito">Desativar Botão Direito</option>
                                 <option value="ativar_botao_direito">Ativar Botão Direito</option>
                             </optgroup>
-                            <optgroup label="Desktop">
+                            <optgroup label="Desktop" class="group-desktop">
                                 <option value="definir_papel_de_parede">Definir Papel de Parede</option>
                             </optgroup>
                             <optgroup label="Gerenciamento de Processos">
@@ -98,7 +98,7 @@
                                 <option value="get_system_info">Obter Informações do Sistema</option>
                                 <option value="view_vnc">Visualizar Tela (VNC)</option>
                             </optgroup>
-                            <optgroup label="Ações Remotas">
+                            <optgroup label="Ações Remotas" class="group-remote">
                                 <option value="enviar_mensagem">Enviar Mensagem na Tela</option>
                                 <option value="reiniciar">Reiniciar Máquina</option>
                                 <option value="desligar">Desligar Máquina</option>
