--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                                 <option value="instalar_nemo">Instalar Nemo e Cinnamon</option>
                                 <option value="desinstalar_scratchjr">Desinstalar ScratchJR</option>
                                 <option value="instalar_scratchjr">Instalar ScratchJR</option>
+                                <option value="desinstalar_gcompris">Desinstalar GCompris (Flatpak)</option>
+                                <option value="instalar_gcompris">Instalar GCompris (Flatpak)</option>
+                                <option value="desinstalar_tuxpaint">Desinstalar Tux Paint (Flatpak)</option>
+                                <option value="instalar_tuxpaint">Instalar Tux Paint (Flatpak)</option>
                             </optgroup>
                             <optgroup label="Controle da Interface" class="group-interface">
                                 <option value="desativar_barra_tarefas">Ocultar Barra de Tarefas</option>
